:iphone: Responsividade parte 1

--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
         </div>
 
         <div class="right__text-down">
-          <p class="text-dowm__text">
+          <p class="text-down__text-desktop">
             concurso <br />
-            <span class="text__span">4531 - 07/04/2020</span>
+            <span class="text-desktop__span">4531 - 07/04/2020</span>
           </p>
+          <p class="text-down__text-mobile">concurso N° 4531</p>
         </div>
       </div>
 
@@ -75,25 +76,24 @@
           <div class="numbers__item">
             <p class="item__text">25</p>
           </div>
-        </div>
-        <div class="left__numbers">
           <div class="numbers__item">
             <p class="item__text">25</p>
           </div>
-        </div>
-        <div class="left__numbers">
           <div class="numbers__item">
             <p class="item__text">25</p>
           </div>
-        </div>
-        <div class="left__numbers">
           <div class="numbers__item">
             <p class="item__text">25</p>
           </div>
-        </div>
-        <div class="left__numbers">
           <div class="numbers__item">
             <p class="item__text">25</p>
+          </div>
+
+          <div class="left__text-left">
+            <p>
+              Este sorteio é meramente ilustrativo e não possui nenhuma ligação
+              com a CAIXA.
+            </p>
           </div>
         </div>
       </div>
