:sparkles: feat: Deixando a logo dinamica via api ( mudando o texto de acordo com a loteria selecionada no select)

--- a/index.html
+++ b/index.html
@@ -71,23 +71,7 @@
       </div>
 
       <div class="left">
-        <div class="left__numbers">
-          <div class="numbers__item">
-            <p class="item__text">25</p>
-          </div>
-          <div class="numbers__item">
-            <p class="item__text">25</p>
-          </div>
-          <div class="numbers__item">
-            <p class="item__text">25</p>
-          </div>
-          <div class="numbers__item">
-            <p class="item__text">25</p>
-          </div>
-          <div class="numbers__item">
-            <p class="item__text">25</p>
-          </div>
-        </div>
+        <div class="left__numbers"></div>
         <div class="left__text-left">
           <p>
             Este sorteio é meramente ilustrativo e não possui nenhuma ligação
