:bug: fix: Resolvendo bug colocando um valor inicial padrão para que apareça um resultado sempre que o usúario abrir ou recarregar o site

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
         <div class="right__text-down">
           <p class="text-down__text-desktop">
             concurso <br />
-            <span class="text-desktop__span">4531 - 07/04/2020</span>
+            <span class="text-desktop__span"></span>
           </p>
-          <p class="text-down__text-mobile">concurso N° 4531</p>
+          <p class="text-down__text-mobile"></p>
         </div>
       </div>
 
